--- a/src/locales/uz.json
+++ b/src/locales/uz.json
@@ -135,11 +135,31 @@
 	"t_childcare_residential_institutions": "Childcare residential institutions",
 	"t_specialized_boarding_schools": "Specialized boarding schools",
 	"t_inson": "INSON",
+	"t_insons": "INSONS",
+	"No institutions found": "No institutions found",
+	"t_inson_details": "Inson details",
+	"Institution instrument not found.": "Institution instrument not found.",
 	"E0170": "O'g'il bolalar: NEST + NEO = TNET",
 	"E0171": "Qizlar: NEST + NEO = TNET",
-    "E0172": "Jami: NEST + NEO = TNET",
-    "E0173": "TNR0 + TNET - NEXT = TNR1",
-    "E0174": "O'g'il bolalar: EOST + EXTT + TSA1 + TSA2 + TSA3 = NEXT",
-    "E0175": "Qizlar: EOST + EXTT + TSA1 + TSA2 + TSA3 = NEXT",
-    "E0176": "Jami: EOST + EXTT + TSA1 + TSA2 + TSA3 = NEXT"
+	"E0172": "Jami: NEST + NEO = TNET",
+	"E0173": "TNR0 + TNET - NEXT = TNR1",
+	"E0174": "O'g'il bolalar: EOST + EXTT + TSA1 + TSA2 + TSA3 = NEXT",
+	"E0175": "Qizlar: EOST + EXTT + TSA1 + TSA2 + TSA3 = NEXT",
+	"E0176": "Jami: EOST + EXTT + TSA1 + TSA2 + TSA3 = NEXT",
+	"t_add_service": "Add service",
+	"t_add_inson_service": "Adding family-type home",
+	"t_address": "Address",
+	"t_district": "District",
+	"t_settlement": "Settlement",
+	"t_capacity": "Capacity",
+	"t_service_code": "Service code",
+	"t_service_code_text": "The service cod must be obtain from the regional coordinator",
+	"t_service_code block": "t_service_code block",
+	"Service added.": "Service added.",
+	"Somethig got wrong, please try again later.": "Somethig got wrong, please try again later.",
+	"Service code already in use.": "Service code already in use.",
+	"The provided service code is wrong.": "The provided service code is wrong.",
+	"Info": "Info",
+	"Import finished.": "Import finished.",
+	"t_working": "Working..."
 }
