--- a/src/locales/uz.json
+++ b/src/locales/uz.json
@@ -149,7 +149,7 @@
 	"t_add_service": "Add service",
 	"t_add_inson_service": "Adding family-type home",
 	"t_address": "Address",
-	"t_district": "District",
+	"t_district": "Tumani",
 	"t_settlement": "Settlement",
 	"t_capacity": "Capacity",
 	"t_service_code": "Service code",
