--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -102,7 +102,7 @@
 	"t_instruments": "Instruments list",
 	"t_button_complete": "Completed",
 	"t_number_to_be_filled": "Number to be filled",
-	"t_number_filled": "Number filled/started",
+	"t_number_filled": "Number of completed questionnaires",
 	"t_number_completed": "Number completed",
 	"t_inson_services": "List of family-type children's homes",
 	"E0163": "The sum of the areas of the buildings where children are accommodated (AF5a) must be less than or equal to the total area of the institution (AF1).",
@@ -126,7 +126,7 @@
 	"t_enable_user_button": "Enable user",
 	"User enabled. Please login.": "User enabled. Please login.",
 	"Authorization code missing.": "Authorization code missing.",
-	"No more users.": "No more users.",
+	"No more users.": "No more user to be added",
 	"t_data_collector": "Data collector - childcare / protection / special education specialist",
 	"t_hr_specialist": "Data collector - HR specialist",
 	"t_admin_specialist": "Data collector - Admin specialist",
@@ -135,10 +135,10 @@
 	"t_childcare_residential_institutions": "Childcare residential institutions",
 	"t_specialized_boarding_schools": "Specialized boarding schools",
 	"t_inson": "INSON",
-	"t_insons": "INSONS",
+	"t_insons": "Inson centers",
 	"No institutions found": "No institutions found",
-	"t_inson_details": "Inson details",
-	"Institution instrument not found.": "Institution instrument not found.",
+	"t_inson_details": "Inson center's details",
+	"Institution instrument not found.": "Instrument missing",
 	"E0170": "BOYS: NEST + NEO = TNET",
 	"E0171": "GIRLS: NEST + NEO = TNET",
 	"E0172": "TOTAL: NEST + NEO = TNET",
@@ -146,7 +146,7 @@
 	"E0174": "BOYS: EOST + EXTT + TSA1 + TSA2 + TSA3 = NEXT",
 	"E0175": "GIRLS: EOST + EXTT + TSA1 + TSA2 + TSA3 = NEXT",
 	"E0176": "TOTAL: EOST + EXTT + TSA1 + TSA2 + TSA3 = NEXT",
-	"t_add_service": "Add service",
+	"t_add_service": "Add family type home",
 	"t_add_inson_service": "Adding family-type home",
 	"t_address": "Address",
 	"t_district": "District",
@@ -154,12 +154,11 @@
 	"t_capacity": "Capacity",
 	"t_service_code": "Service code",
 	"t_service_code_text": "The service cod must be obtain from the regional coordinator",
-	"t_service_code block": "t_service_code block",
 	"Service added.": "Service added.",
 	"Somethig got wrong, please try again later.": "Somethig got wrong, please try again later.",
 	"Service code already in use.": "Service code already in use.",
-	"The provided service code is wrong.": "The provided service code is wrong.",
+	"The provided service code is wrong.": "The provided service code is invalid",
 	"Info": "Info",
 	"Import finished.": "Import finished.",
-	"t_working": "Working..."
+	"t_working": "In progress. Please wait..."
 }
