--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -48,7 +48,7 @@
 	"t_profession": "Профессия",
 	"t_phone": "Телефон",
 	"t_edit_user": "Просмотр пользователя",
-	"t_export_user_instruments": "Export user instruments",
+	"t_export_user_instruments": "Инструменты пользователя,совершающего экспорт документа",
 	"t_add_child": "Добавить ребенка",
 	"t_csr_list": "Реестр персонала учреждения",
 	"t_add_staff": "Добавить сотрудника",
@@ -102,9 +102,9 @@
 	"t_instruments": "Список инструментов",
 	"t_button_complete": "Завершено",
 	"t_number_to_be_filled": "Всего заполнить",
-	"t_number_filled": "Number filled/started",
+	"t_number_filled": "Количество заполненных анкет",
 	"t_number_completed": "Завершено",
-	"t_inson_services": "List of family-type children's homes",
+	"t_inson_services": "Список детских домов семейного типа",
 	"E0163": "The sum of the areas of the buildings where children are accommodated (AF5a) must be less than or equal to the total area of the institution (AF1).",
 	"main._chooseFolder": "Выбрать папку",
 	"main._chooseFile": "Выбрать файл",
@@ -116,29 +116,29 @@
 	"Some instruments are not allowed to be imported. Please check the file and try again.": "Some instruments are not allowed to be imported. Please check the file and try again.",
 	"t_user_type": "Тип пользователя",
 	"t_pf": "Патронатная семья",
-	"t_auth_code": "Authorization code",
-	"Invalid authorization code.": "Invalid authorization code.",
+	"t_auth_code": "Код авторизации",
+	"Invalid authorization code.": "Код авторизации недействителен",
 	"must_be_earlier": "Дата в X должна быть раньше, чем Y",
 	"must_be_later_or_equal": "Дата в Y должна быть позже или равна дате в X",
 	"must_be_later": "Дата в Y должна быть позже даты в X",
-	"t_select_service_from_list": "Please select a service from the list",
-	"t_enable_user": "This user is disabled. Please contact the regional coordinator for an authorization code to enable it.",
-	"t_enable_user_button": "Enable user",
-	"User enabled. Please login.": "User enabled. Please login.",
-	"Authorization code missing.": "Authorization code missing.",
-	"No more users.": "No more users.",
+	"t_select_service_from_list": "Пожалуйста выберите услугу из списка",
+	"t_enable_user": "Этот пользователь деактивирован.Пожалуйста свяжитесь с региональным координатором для получения кода авторизации для активации пользователя",
+	"t_enable_user_button": "Активировать пользователя",
+	"User enabled. Please login.": "Пользователь активирован. Пожалуйста зайдите",
+	"Authorization code missing.": "Код авторизации отсутствует",
+	"No more users.": "Больше никаких пользователей добавлять не нужно",
 	"t_data_collector": "Сборщик данных - специалист по уходу за ребенком /специалист сектора защиты ребенка/специалист специализированного учреждения",
 	"t_hr_specialist": "Сборщик данных - сотрудник кадрового отдела",
 	"t_admin_specialist": "Сборщик данных - сотрудник администрации",
-	"No services available": "No services available - RU",
-	"invalid_date": "Invalid date",
-	"t_childcare_residential_institutions": "Childcare residential institutions",
-	"t_specialized_boarding_schools": "Specialized boarding schools",
-	"t_inson": "INSON",
-	"t_insons": "INSONS",
-	"No institutions found": "No institutions found",
-	"t_inson_details": "Inson details",
-	"Institution instrument not found.": "Institution instrument not found.",
+	"No services available": "Услуга отсутствует",
+	"invalid_date": "Неверная дата",
+	"t_childcare_residential_institutions": "Интернатные учреждения по уходу за детьми",
+	"t_specialized_boarding_schools": "Специализированные школы-интернаты",
+	"t_inson": "Инсон",
+	"t_insons": "Центры \"Инсон\"",
+	"No institutions found": "Услуга отсутствует",
+	"t_inson_details": "Информация о  центре \"Инсон\"",
+	"Institution instrument not found.": "Инструмент отсутствует",
 	"E0170": "Мальчики: NEST + NEO = TNET",
 	"E0171": "Девочки: NEST + NEO = TNET",
 	"E0172": "Всего: NEST + NEO = TNET",
@@ -146,19 +146,19 @@
 	"E0174": "Мальчики: EOST + EXTT + TSA1 + TSA2 + TSA3 = NEXT",
 	"E0175": "Девочки: EOST + EXTT + TSA1 + TSA2 + TSA3 = NEXT",
 	"E0176": "Всего: EOST + EXTT + TSA1 + TSA2 + TSA3 = NEXT",
-	"t_add_service": "Add service",
-	"t_add_inson_service": "Adding family-type home",
-	"t_address": "Address",
+	"t_add_service": "Услуга добавлена",
+	"t_add_inson_service": "Добавить детский дом семейного типа",
+	"t_address": "Адрес",
 	"t_district": "Район",
-	"t_settlement": "Settlement",
-	"t_capacity": "Capacity",
-	"t_service_code": "Service code",
-	"t_service_code_text": "The service cod must be obtain from the regional coordinator",
-	"Service added.": "Service added.",
-	"Somethig got wrong, please try again later.": "Somethig got wrong, please try again later.",
-	"Service code already in use.": "Service code already in use.",
-	"The provided service code is wrong.": "The provided service code is wrong.",
-	"Info": "Info",
-	"Import finished.": "Import finished.",
-	"t_working": "In progress. Please wait!"
+	"t_settlement": "Населённый пункт",
+	"t_capacity": "Емкость",
+	"t_service_code": "Код услуги",
+	"t_service_code_text": "Код услуги необходимо получить у регионального координатора",
+	"Service added.": "Услуга добавлена",
+	"Somethig got wrong, please try again later.": "Что-то пошло не так,повторите попытку позже",
+	"Service code already in use.": "Код услуги уже используется",
+	"The provided service code is wrong.": "Введенный код услуги недействителен",
+	"Info": "Информация",
+	"Import finished.": "Импорт документа закончен",
+	"t_working": "В процессе. Пожалуйста подождите..."
 }
