--- a/src/locales/uz.json
+++ b/src/locales/uz.json
@@ -48,7 +48,7 @@
 	"t_profession": "Kasb",
 	"t_phone": "Telefon",
 	"t_edit_user": "Foydalanuvchi ko'rinishi",
-	"t_export_user_instruments": "Export user instruments",
+	"t_export_user_instruments": "Hujjatni eksport qiladigan foydalanuvchi vositalari / shakllari",
 	"t_add_child": "Bolani qo'shish",
 	"t_csr_list": "Muassasa xodimlarining reestri",
 	"t_add_staff": "Xodimni qo'shish",
@@ -104,7 +104,7 @@
 	"t_number_to_be_filled": "Barchasi to'ldiriladi",
 	"t_number_filled": "Number filled/started",
 	"t_number_completed": "Tugatildi",
-	"t_inson_services": "List of family-type children's homes",
+	"t_inson_services": "Oila tipidagi bolalar uylari ro'yxati",
 	"E0163": "The sum of the areas of the buildings where children are accommodated (AF5a) must be less than or equal to the total area of the institution (AF1).",
 	"main._chooseFolder": "Papkani tanlang",
 	"main._chooseFile": "Faylni tanlang",
@@ -116,29 +116,29 @@
 	"Some instruments are not allowed to be imported. Please check the file and try again.": "Some instruments are not allowed to be imported. Please check the file and try again.",
 	"t_user_type": "Foydalanuvchi turi",
 	"t_pf": "Patronat oila",
-	"t_auth_code": "Authorization code",
-	"Invalid authorization code.": "Invalid authorization code.",
+	"t_auth_code": "Avtorizatsiya kodi",
+	"Invalid authorization code.": "Avtorizatsiya kodi noto'g'ri",
 	"must_be_earlier": "X dagi sana Y dan oldinroq bo'lishi kerak",
 	"must_be_later_or_equal": "Y-dagi sana X-dagi sanadan keyin yoki unga teng bo'lishi kerak",
 	"must_be_later": "Y-dagi sana X-dagi sanadan keyin bo'lishi kerak",
-	"t_select_service_from_list": "Please select a service from the list",
-	"t_enable_user": "This user is disabled. Please contact the regional coordinator for an authorization code to enable it.",
-	"t_enable_user_button": "Enable user",
-	"User enabled. Please login.": "User enabled. Please login.",
-	"Authorization code missing.": "Authorization code missing.",
-	"No more users.": "No more users.",
+	"t_select_service_from_list": "Iltimos, ro'yxatdan xizmatni tanlang",
+	"t_enable_user": "Ushbu foydalanuvchi o'chirilgan. Iltimos, uni qo'shish va avtorizatsiya kodini olish uchun hududiy koordinatorga murojaat qiling.",
+	"t_enable_user_button": "Foydalanuvchini qo'shish",
+	"User enabled. Please login.": "Foydalanuvchi qo'shildi. Iltimos, tizimga kiring.",
+	"Authorization code missing.": "Avtorizatsiya kodi mavjud emas",
+	"No more users.": "Endi foydalanuvchi qo'shilmaydi",
 	"t_data_collector": "Ma'lumot yig'uvchi/kirituvchi - bolalarga vasiylik qiluvchi / g'amxo'rlik qiluvchi/ maxsus ta'lim mutaxassisi",
 	"t_hr_specialist": "Ma'lumot yig'uvchi/kirituvchi - Xodimlar bo'limi mutaxassisi",
 	"t_admin_specialist": "Ma'lumot yig'uvchi/kirituvchi - Ma'muriyat bo'limi vakili",
-	"No services available": "No services available - UZ",
-	"invalid_date": "Invalid date",
-	"t_childcare_residential_institutions": "Childcare residential institutions",
-	"t_specialized_boarding_schools": "Specialized boarding schools",
+	"No services available": "Xizmatlar mavjud emas",
+	"invalid_date": "Sana noto'ri kiritilgan",
+	"t_childcare_residential_institutions": "Bolalarga vasiylik qilish internat muassasalari",
+	"t_specialized_boarding_schools": "Ixtisoslashtirilgan maktab-internatlar",
 	"t_inson": "INSON",
-	"t_insons": "INSONS",
-	"No institutions found": "No institutions found",
-	"t_inson_details": "Inson details",
-	"Institution instrument not found.": "Institution instrument not found.",
+	"t_insons": "\"Inson\" markazlari",
+	"No institutions found": "Xizmat mavjud emas",
+	"t_inson_details": "\"Innon\" markazi haqida ma'lumot",
+	"Institution instrument not found.": "Shakl mavjud emas",
 	"E0170": "O'g'il bolalar: NEST + NEO = TNET",
 	"E0171": "Qizlar: NEST + NEO = TNET",
 	"E0172": "Jami: NEST + NEO = TNET",
@@ -146,20 +146,19 @@
 	"E0174": "O'g'il bolalar: EOST + EXTT + TSA1 + TSA2 + TSA3 = NEXT",
 	"E0175": "Qizlar: EOST + EXTT + TSA1 + TSA2 + TSA3 = NEXT",
 	"E0176": "Jami: EOST + EXTT + TSA1 + TSA2 + TSA3 = NEXT",
-	"t_add_service": "Add service",
-	"t_add_inson_service": "Adding family-type home",
-	"t_address": "Address",
+	"t_add_service": "Oilaviy bolalar uyini qo'shing",
+	"t_add_inson_service": "Oilaviy bolalar uyini qo'shilmoqda",
+	"t_address": "Manzili",
 	"t_district": "Tumani",
-	"t_settlement": "Settlement",
-	"t_capacity": "Capacity",
-	"t_service_code": "Service code",
-	"t_service_code_text": "The service cod must be obtain from the regional coordinator",
-	"t_service_code block": "t_service_code block",
-	"Service added.": "Service added.",
-	"Somethig got wrong, please try again later.": "Somethig got wrong, please try again later.",
-	"Service code already in use.": "Service code already in use.",
-	"The provided service code is wrong.": "The provided service code is wrong.",
-	"Info": "Info",
-	"Import finished.": "Import finished.",
-	"t_working": "Working..."
+	"t_settlement": "Aholi punkti",
+	"t_capacity": "Imkoniyatlar",
+	"t_service_code": "Xizmat kodi",
+	"t_service_code_text": "Xizmat kodini hududiy koordinatordan olish kerak",
+	"Service added.": "Xizmat qo'shildi",
+	"Somethig got wrong, please try again later.": "Biror nima noto'g'ri ketdi, keyinroq qayta urinib ko'ring",
+	"Service code already in use.": "Xizmat kodi ishlatilmoqda",
+	"The provided service code is wrong.": "Kiritilgan xizmat kodi noto'g'ri",
+	"Info": "Ma'lumot",
+	"Import finished.": "Hujjatni import qilish tugadi",
+	"t_working": "Davom etmoqda. Iltimos kuting..."
 }
