--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -105,7 +105,7 @@
 	"t_number_filled": "Количество заполненных анкет",
 	"t_number_completed": "Завершено",
 	"t_inson_services": "Список детских домов семейного типа",
-	"E0163": "The sum of the areas of the buildings where children are accommodated (AF5a) must be less than or equal to the total area of the institution (AF1).",
+	"E0163": "Общая площать помещений,где размещены дети (AF5a) дожна быть меньше или равна общей площади  учреждения (AF1)",
 	"main._chooseFolder": "Выбрать папку",
 	"main._chooseFile": "Выбрать файл",
 	"main.success": "Удачно",
@@ -113,7 +113,7 @@
 	"Please fill in all fields": "Пожалуйста заполните все поля.",
 	"Error": "Ошибка",
 	"main._dataDownloadedError": "Ошибка Папка не выбрана!",
-	"Some instruments are not allowed to be imported. Please check the file and try again.": "Some instruments are not allowed to be imported. Please check the file and try again.",
+	"Some instruments are not allowed to be imported. Please check the file and try again.": "Некоторые инструмены запрещено импортировать. Пожалуйста,проверьте файл и повторите попытку",
 	"t_user_type": "Тип пользователя",
 	"t_pf": "Патронатная семья",
 	"t_auth_code": "Код авторизации",
