--- a/src/locales/uz.json
+++ b/src/locales/uz.json
@@ -105,7 +105,7 @@
 	"t_number_filled": "Number filled/started",
 	"t_number_completed": "Tugatildi",
 	"t_inson_services": "Oila tipidagi bolalar uylari ro'yxati",
-	"E0163": "The sum of the areas of the buildings where children are accommodated (AF5a) must be less than or equal to the total area of the institution (AF1).",
+	"E0163": "Bolalar yashaydigan binolarning umumiy maydoni (AF5a) muassasaning umumiy maydonidan kam yoki teng bo'lishi kerak (AF1).",
 	"main._chooseFolder": "Papkani tanlang",
 	"main._chooseFile": "Faylni tanlang",
 	"main.success": "Muvaffaqiyatli",
@@ -113,7 +113,7 @@
 	"Please fill in all fields": "Iltimos, barcha maydonlarni to'ldiring.",
 	"Error": "Xato",
 	"main._dataDownloadedError": "Xato. Papka tanlanmagan!",
-	"Some instruments are not allowed to be imported. Please check the file and try again.": "Some instruments are not allowed to be imported. Please check the file and try again.",
+	"Some instruments are not allowed to be imported. Please check the file and try again.": "Ayrim vositslarni yuklashga ruxsat berilmaydi. Iltimos, faylni tekshiring va qayta urinib ko'ring.",
 	"t_user_type": "Foydalanuvchi turi",
 	"t_pf": "Patronat oila",
 	"t_auth_code": "Avtorizatsiya kodi",
