actualizat nume instrument 5

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -78,7 +78,7 @@
 	"t_institution": "Institution",
 	"t_institutions": "Institutions",
 	"t_add_young_people": "Add young person",
-	"t_yplcs_list": "Questionnaire about the young person leaving the child care system",
+	"t_yplcs_list": "Questionnaire about the young person who left the alternative child care system",
 	"t_cibs_list": "Questionnaire about the child placed in specialized boarding schools",
 	"not_in_registry": "The institution does not appear in the Registry",
 	"t_tqyp_list": "Trace questionnaire about the young person who left the alternative care system",
@@ -86,7 +86,7 @@
 	"t_instrument2": "I2. Questionnaire about the child placed in specialized boarding schools",
 	"t_instrument3": "I3. Staff registry of the childcare institutions and specialized boarding-schools",
 	"t_instrument4": "I4. Material resources of the institution and the living conditions of the residing children",
-	"t_instrument5": "I5. Questionnaire about the young person leaving the child care system",
+	"t_instrument5": "I5. Questionnaire about the young person who left the alternative child care system",
 	"t_instrument5A": "I5A. Trace questionnaire about the young person who left the alternative care system",
 	"t_instrument6": "I6. Synthetic Data Collection Sheet Regarding Entries and Exits from the Childcare Institution and Specialized Boarding Schools",
 	"t_instrument7": "I7. Family-Type Children's Home Questionnaire",
@@ -97,7 +97,7 @@
 	"t_questionnaire_on_the_material_resources": "Material resources of the institution and the living conditions of the residing children",
 	"t_staff_working_in_the_service": "Staff registry of the childcare institutions and specialized boarding-schools",
 	"t_data_sheet_on_entries_and_exits": "Synthetic Data Collection Sheet Regarding Entries and Exits from the Childcare Institution and Specialized Boarding Schools",
-	"t_young_people_who_left_care_system": "Questionnaire about the young person leaving the child care system",
+	"t_young_people_who_left_care_system": "Questionnaire about the young person who left the alternative child care system",
 	"t_patronat_family_questionnaires": "Patronat Family Questionnaire",
 	"t_instruments": "Instruments list",
 	"t_button_complete": "Completed",
