--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -78,7 +78,7 @@
 	"t_institution": "Учреждение",
 	"t_institutions": "Yчреждения",
 	"t_add_young_people": "Добавьте молодого человека",
-	"t_yplcs_list": "Анкета о молодом человеке, выходящем из системы опеки  детей",
+	"t_yplcs_list": "Анкета о молодом человеке вышедшим из системы опеки",
 	"t_cibs_list": "Анкета о ребенке, помещенном в специализированную школу-интернат",
 	"not_in_registry": "Учреждение не указано в реестре",
 	"t_tqyp_list": "Опросник по отслеживанию молодых людей покинувших систему альтернативной опеки",
@@ -86,7 +86,7 @@
 	"t_instrument2": "I2. Анкета о ребенке, помещенном в специализированную школу-интернат",
 	"t_instrument3": "I3. Кадровый учет детских учреждений и специализированных школ-интернатов",
 	"t_instrument4": "I4. Материальная база учреждения и условия проживания проживания детей в них",
-	"t_instrument5": "I5. Анкета о молодом человеке, выходящем из системы опеки  детей",
+	"t_instrument5": "I5. Анкета о молодом человеке вышедшим из системы опеки",
 	"t_instrument5A": "I5A. Опросник по отслеживанию молодых людей покинувших систему альтернативной опеки",
 	"t_instrument6": "I6. Лист сбора сводных данных о поступлении и выходе из детского учреждения и специализированной школы-интерната",
 	"t_instrument7": "I7. Анкета детского дома семейного типа",
@@ -97,7 +97,7 @@
 	"t_questionnaire_on_the_material_resources": "Материальная база учреждения и условия проживания проживания детей в них",
 	"t_staff_working_in_the_service": "Кадровый учет детских учреждений и специализированных школ-интернатов",
 	"t_data_sheet_on_entries_and_exits": "Лист сбора сводных данных о поступлении и выходе из детского учреждения и специализированной школы-интерната",
-	"t_young_people_who_left_care_system": "Анкета о молодом человеке, выходящем из системы опеки  детей",
+	"t_young_people_who_left_care_system": "Анкета о молодом человеке вышедшим из системы опеки",
 	"t_patronat_family_questionnaires": "Анкета для патронатных семей",
 	"t_instruments": "Список инструментов",
 	"t_button_complete": "Завершено",
