--- a/src/locales/uz.json
+++ b/src/locales/uz.json
@@ -78,7 +78,7 @@
 	"t_institution": "Muassasa",
 	"t_institutions": "Muassasalar",
 	"t_add_young_people": "Yosh shaxsni qo'shish",
-	"t_yplcs_list": "Bolalarga vasiylik qilish tizimidan chiqib ketayotgan yosh odam haqida soʻrovnoma",
+	"t_yplcs_list": "Vasiylik tizimidan chiqib ketgan yosh shaxs haqida so'rovnoma",
 	"t_cibs_list": "Ixtisoslashtirilgan maktab-internatlarga joylashtirilgan bola to'g'risida so'rovnoma",
 	"not_in_registry": "Muassasa reestrda ko'rsatilmagan",
 	"t_tqyp_list": "Muqobil vasiylik tizimini tark etgan yosh shaxsning kuzatuv so'rovnomasi",
@@ -86,7 +86,7 @@
 	"t_instrument2": "I2. Ixtisoslashtirilgan maktab-internatlarga joylashtirilgan bola to'g'risida so'rovnoma",
 	"t_instrument3": "I3. Bolalar muassasalari va ixtisoslashtirilgan maktab-internatlarning hodimlar reestri",
 	"t_instrument4": "I4. Muassasaning moddiy texnik bazasi va istiqomat qiluvchi bolalarning yashash sharoitlari",
-	"t_instrument5": "I5. Bolalarga vasiylik qilish tizimidan chiqib ketayotgan yosh odam haqida soʻrovnoma",
+	"t_instrument5": "I5. Vasiylik tizimidan chiqib ketgan yosh shaxs haqida so'rovnoma",
 	"t_instrument5A": "I5A. Muqobil vasiylik tizimini tark etgan yosh shaxsning kuzatuv so'rovnomasi",
 	"t_instrument6": "I6. Bolalar muassasasi va ixtisoslashtirilgan maktab-internatlarga qabul qilish va ulardan chiqarish bo'yicha umumlashgan ma'lumotlarni yig'ish varaqasi",
 	"t_instrument7": "I7. Oilaviy bolalar uyi so'rоvnomasi",
@@ -97,7 +97,7 @@
 	"t_questionnaire_on_the_material_resources": "Muassasaning moddiy texnik bazasi va istiqomat qiluvchi bolalarning yashash sharoitlari",
 	"t_staff_working_in_the_service": "Bolalar muassasalari va ixtisoslashtirilgan maktab-internatlarning hodimlar reestri",
 	"t_data_sheet_on_entries_and_exits": "Bolalar muassasasi va ixtisoslashtirilgan maktab-internatlarga qabul qilish va ulardan chiqarish bo'yicha umumlashgan ma'lumotlarni yig'ish varaqasi",
-	"t_young_people_who_left_care_system": "Bolalarga vasiylik qilish tizimidan chiqib ketayotgan yosh odam haqida soʻrovnoma",
+	"t_young_people_who_left_care_system": "Vasiylik tizimidan chiqib ketgan yosh shaxs haqida so'rovnoma",
 	"t_patronat_family_questionnaires": "Patronat oilasi uchun so'rovnoma",
 	"t_instruments": "Shakllar ro'yxati",
 	"t_button_complete": "Tugatildi",
