echivalenta wb-uzbek-r

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -22,8 +22,11 @@
 	"t_institution_details": "Institution details",
 	"t_view": "View",
 	"t_regionalCoordinator_level_view_regionalCoordinators": "Regional coordinator level view / regional coordinators",
+	"t_national_level_view": "National level view",
 	"t_details": "Details",
 	"t_export": "Export",
+	"t_SPSS": "SPSS",
+	"t_Stata": "Stata",
 	"t_export_data": "Export Data",
 	"t_filter": "Filter",
 	"t_filter_by": "Filter by",
