--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -22,8 +22,11 @@
 	"t_institution_details": "Данные об учреждении",
 	"t_view": "Просмотр",
 	"t_regionalCoordinator_level_view_regionalCoordinators": "Уровень просмотра Регионального координатора/региональных координаторов",
+	"t_national_level_view": "National level view",
 	"t_details": "Данные",
 	"t_export": "Экспорт",
+	"t_SPSS": "СПСС",
+	"t_Stata": "Стата",
 	"t_export_data": "Экспорт данных",
 	"t_filter": "Фильтр",
 	"t_filter_by": "Фильтровать по",
