--- a/src/locales/uz.json
+++ b/src/locales/uz.json
@@ -21,9 +21,12 @@
 	"t_in_progress": "Jarayonda",
 	"t_institution_details": "Muassasaga oid ma'lumotlar",
 	"t_view": "Ko'rish",
+	"t_national_level_view": "National level view",
 	"t_regionalCoordinator_level_view_regionalCoordinators": "Hududiy koordinator/hududiy koordinatorlarning ko'rish darajasi",
 	"t_details": "Ma'lumotlar",
 	"t_export": "Eksport",
+	"t_SPSS": "SPSS",
+	"t_Stata": "Stata",
 	"t_export_data": "Ma'lumotlarni eksport qilish",
 	"t_filter": "Filtr",
 	"t_filter_by": "... bo'yicha filtrlash",
